package app.builders;

public interface Product {
    String name();

    String color();

    String maker();

    float price();

}
